fixing display issue on mobile

--- a/input.css
+++ b/input.css
@@ -113,6 +113,7 @@ h2 {
 
 #webpage-end-text {
 	margin-top: 3vh;
+	margin-bottom: 3vh;
 	font-size: 1em;
 	font-weight: 500;
 	text-align: center;
@@ -172,7 +173,7 @@ h2 {
 .project-info {
 	max-width: 100vw;
 }
-@media only screen and (min-width: 400px) {
+@media only screen and (min-width: 350) {
 	#contact-button-container {
 		flex-direction: row;
 	}
